--- a/editor.html
+++ b/editor.html
@@ -221,18 +221,17 @@
 <body>
     <header>
         <div class="left-controls">
-            <select id="dropdown1">
-                <option value="component">Adder Component</option>
+            <select id="dropdown1" onchange="selectOption(this.value)">
                 <option value="template">Template Component</option>
+                <option value="component" style="display: none;">Adder Component</option>
             </select>
             <select id="dropdown2">
-                <option>paragraph</option>
-                <option>intro</option>
-                <option>button</option>
+                <option>headersection</option>
+                <option>herosection</option>
             </select>
-            <input type="text" id="componentId" placeholder="id">
+            <input type="text" id="componentId" placeholder="id" style="display: none;">
             <input type="text" id="componentName" placeholder="name">
-            <input type="text" id="rootName" placeholder="rootName">
+            <input type="text" id="rootName" placeholder="rootName" style="display: none;">
             <button onclick="runCode()">Run ▶</button>
         </div>
         <div class="right-controls">
@@ -271,7 +270,85 @@
         </div>
     </div>
 
+
+    <button id="uploadBtn" onclick="getSnapshort()">📸 Take & Upload Snapshot</button>
+    <div id="imageURL"></div>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
     <script>
+
+        document.addEventListener("DOMContentLoaded",()=>{
+            if(window.localStorage.getItem("qurate_user_id") === null){
+                let userId = window.prompt("please enter your name to continue");
+
+
+                window.localStorage.setItem("qurate_user_id",userId);
+
+            }
+        })
+
+
+
+
+        let htmlString = "";
+
+
+
+
+
+
+
+
+
+        async function getSnapshort() {
+            const captureArea = document.createElement("html");
+            captureArea.innerHTML = htmlString;
+            document.body.appendChild(captureArea); // Must be in DOM
+
+
+            console.log(captureArea);
+
+
+            const API_KEY = "YOUR_CLIENT_API_KEY"; // ← replace this with your imgbb API key
+
+            // Take snapshot using html2canvas
+            const canvas = await html2canvas(captureArea);
+            const imageData = canvas.toDataURL('image/png').split(',')[1]; // remove "data:image/png;base64,"
+
+            // Create FormData
+            const formData = new FormData();
+            formData.append("image", imageData);
+
+            // Upload to imgbb
+            const response = await fetch(`https://api.imgbb.com/1/upload?key=1be2897176d392966adf30bee8894572`, {
+                method: "POST",
+                body: formData
+            });
+
+            const result = await response.json();
+            console.log(result);
+
+            // Show the image URL
+            if (result && result.data && result.data.url) {
+                const urlDiv = document.getElementById("imageURL");
+                urlDiv.style.display = "block";
+                urlDiv.innerHTML = `
+                  ✅ Uploaded Successfully!<br>
+                  <strong>URL:</strong> <a href="${result.data.url}" target="_blank">${result.data.url}</a>
+                `;
+                console.log(result.data.url);
+                return result.data.url;
+            } else {
+                alert("Upload failed. Check API key or network connection.");
+            }
+        }
+
+
+
+
         let serverDataCache = {};
 
         function runCode() {
@@ -280,6 +357,7 @@
             const preview = document.getElementById("preview").contentDocument;
             preview.open();
             preview.write(`<!DOCTYPE html><html><head><style>${css}</style></head><body>${html}</body></html>`);
+            htmlString = `<!DOCTYPE html><html><head><style>${css}</style></head><body>${html}</body></html>`;
             preview.close();
         }
 
@@ -290,7 +368,7 @@
             const css = document.getElementById("cssCode").value;
             const option1 = document.getElementById("dropdown1").value;
             const option2 = document.getElementById("dropdown2").value;
-            const compId = document.getElementById("componentId").value;
+            const compId = window.localStorage.getItem("qurate_user_id")+"_"+Date.now();
             const compName = document.getElementById("componentName").value;
             const rootName = document.getElementById("rootName").value;
 
@@ -322,9 +400,13 @@
                 alert("Request failed!");
             };
 
-            xhr.send(JSON.stringify({
-                html, css, option1, option2, compId, compName, rootName
-            }));
+            getSnapshort(rootName).then(url => {
+                xhr.send(JSON.stringify({
+                    html, css, option1, option2, compId, compName, rootName, url
+                }));
+            })
+
+
         }
 
         function renderServerData(data) {
@@ -402,6 +484,40 @@
         function closePopup() {
             document.getElementById("popupModal").style.display = "none";
         }
+
+        function selectOption(option) {
+
+            console.log(option);
+
+            let ele = document.getElementById("dropdown2")
+            console.log(ele)
+
+
+
+
+            // alert(option)
+            if (option == "component") {
+                let dropDownOptn = document.getElementById("dropdown2");
+                dropDownOptn.innerHTML = `
+                    <option>paragraph</option>
+                    <option>intro</option>
+                    <option>button</option>
+                `
+            }
+            else if (option == "template") {
+                let dropDownOptn = document.getElementById("dropdown2");
+                dropDownOptn.innerHTML = `
+                    <option>headersection</option>
+                    <option>herosection</option>
+                    
+                `
+            }
+        }
+    </script>
+    <script>
+
+
+
     </script>
 </body>
 
