updating editor of for the updates of components

--- a/editor.html
+++ b/editor.html
@@ -228,6 +228,7 @@
             <select id="dropdown2">
                 <option>headersection</option>
                 <option>herosection</option>
+                <option>servicessection</option>
             </select>
             <input type="text" id="componentId" placeholder="id" style="display: none;">
             <input type="text" id="componentName" placeholder="name">
