--- a/editor.html
+++ b/editor.html
@@ -377,7 +377,7 @@
             loader.style.display = "flex";
 
             const xhr = new XMLHttpRequest();
-            xhr.open("POST", "http://localhost:9600/checkaddingnewcomponent", true);
+            xhr.open("POST", "https://qurate-backend.vercel.app/checkaddingnewcomponent", true);
             xhr.setRequestHeader("Content-Type", "application/json");
 
             xhr.onload = function () {
@@ -463,7 +463,7 @@
             };
 
             const xhr = new XMLHttpRequest();
-            xhr.open("POST", "http://localhost:9600/uploadnewcomponent", true);
+            xhr.open("POST", "https://qurate-backend.vercel.app/uploadnewcomponent", true);
             xhr.setRequestHeader("Content-Type", "application/json");
 
             xhr.onload = function () {
