adding gallery option

--- a/editor.html
+++ b/editor.html
@@ -229,6 +229,7 @@
                 <option>headersection</option>
                 <option>herosection</option>
                 <option>servicessection</option>
+                <option>gallerysection</option>
             </select>
             <input type="text" id="componentId" placeholder="id" style="display: none;">
             <input type="text" id="componentName" placeholder="name">
