taking a large leap

--- a/editor.html
+++ b/editor.html
@@ -230,6 +230,12 @@
                 <option>herosection</option>
                 <option>servicessection</option>
                 <option>gallerysection</option>
+                <option>portfolio</option>
+                <option>faq</option>
+                <option>blog</option>
+                <option>stats</option>
+                <option>aboutus</option>
+                <option>sites</option>
             </select>
             <input type="text" id="componentId" placeholder="id" style="display: none;">
             <input type="text" id="componentName" placeholder="name">
